--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - containers
-- vector
+- vector >= 0.12.2
 # Pine deps
 - sdl2 >= 2.5
 - sdl2-image >= 0.1 && < 2.1
