--- a/rl.cabal
+++ b/rl.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d915ed7004c281fdd9393cf58f2c987cf2dbb55bde8bbfa780d26d24dfb5fb54
+-- hash: 9b0c4c28d6a9f2bb4d834f1721075548d9ea9bc95034b6258b124480519508c6
 
 name:           rl
 version:        0.1.0.0
@@ -47,7 +47,7 @@ library
     , sdl2-image >=0.1 && <2.1
     , stm >=2.4 && <2.6
     , text >=1.2.3 && <1.3
-    , vector
+    , vector >=0.12.2
   default-language: Haskell2010
 
 executable rl-exe
@@ -67,7 +67,7 @@ executable rl-exe
     , sdl2-image >=0.1 && <2.1
     , stm >=2.4 && <2.6
     , text >=1.2.3 && <1.3
-    , vector
+    , vector >=0.12.2
   default-language: Haskell2010
 
 test-suite rl-test
@@ -88,5 +88,5 @@ test-suite rl-test
     , sdl2-image >=0.1 && <2.1
     , stm >=2.4 && <2.6
     , text >=1.2.3 && <1.3
-    , vector
+    , vector >=0.12.2
   default-language: Haskell2010
